[metadata]
name = autolv
version = 0.1.8
author = Lee Johnston
author_email = lee.johnston.100@gmail.com
description = Automate LabVIEW from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/l-johnston/autolv
project_urls =
    Bug Tracker = https://github.com/l-johnston/autolv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pywin32
    numpy
